--- a/index.html
+++ b/index.html
@@ -1,6 +1,27 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vivek Website</title>
+ </head>
+ <body>
+   <h1>Vivek Jain Portfolio</h1> 
+   <h2>I am an Web enthusiast</h2>
+   <hr />
+   <a href="./public/movie-ranking.html">Movie Ranking project</a>
+   <img src ="./assets/images/birthday-invite.png" height = 300  alt="brithday"/>
+   <a href="./public/birthday-invite.html">Birthday Invite project</a>
+   <hr />
+   <img src ="./assets/images/movie-ranking.png" height = 300  alt="movie ranking"/>
+   <hr />
+   <a href="./public/about.html">Conact me</a>
+ </body>
+ </html>
 
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+ 
 
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
 
