--- a/index.html
+++ b/index.html
@@ -1,36 +1,22 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
- <!DOCTYPE html>
- <html lang="en">
- <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vivek Website</title>
- </head>
- <body>
-   <h1>Vivek Jain Portfolio</h1> 
-   <h2>I am an Web enthusiast</h2>
-   <hr />
-   <a href="./public/movie-ranking.html">Movie Ranking project</a>
-   <img src ="./assets/images/birthday-invite.png" height = 300  alt="brithday"/>
-   <a href="./public/birthday-invite.html">Birthday Invite project</a>
-   <hr />
-   <img src ="./assets/images/movie-ranking.png" height = 300  alt="movie ranking"/>
-   <hr />
-   <a href="./public/about.html">Conact me</a>
- </body>
- </html>
+<!DOCTYPE html>
+<html lang="en">
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
- 
+<head>
+  <meta charset="UTF-8">
+  <title>Angela's Portfolio</title>
+</head>
 
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
+<body>
+  <h1>Angela Yu's Portfolio</h1>
+  <h2>I'm a Web Developer</h2>
+  <hr />
+  <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
+  <img src="./assets/images/movie-ranking.png" height="200" alt="movie ranking project preview"/>
+  <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
+  <img src="./assets/images/birthday-invite.png" height="200" alt="birthday invite project preview"/>
+  <hr />
+  <a href="./public/about.html">About Me</a>
+  <a href="./public/contact.html">Contact Me</a>
+</body>
 
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+</html>
